; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-mxc/extr_gpio.c__set_gpio_irqenable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-mxc/extr_gpio.c__set_gpio_irqenable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mxc_gpio_port = type { i64 }

@GPIO_IMR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mxc_gpio_port*, i32, i32)* @_set_gpio_irqenable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_set_gpio_irqenable(%struct.mxc_gpio_port* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.mxc_gpio_port*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.mxc_gpio_port* %0, %struct.mxc_gpio_port** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.mxc_gpio_port*, %struct.mxc_gpio_port** %4, align 8
  %9 = getelementptr inbounds %struct.mxc_gpio_port, %struct.mxc_gpio_port* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @GPIO_IMR, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i32 @__raw_readl(i64 %12)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* %5, align 4
  %16 = shl i32 1, %15
  %17 = xor i32 %16, -1
  %18 = and i32 %14, %17
  %19 = load i32, i32* %6, align 4
  %20 = icmp ne i32 %19, 0
  %21 = xor i1 %20, true
  %22 = xor i1 %21, true
  %23 = zext i1 %22 to i32
  %24 = load i32, i32* %5, align 4
  %25 = shl i32 %23, %24
  %26 = or i32 %18, %25
  store i32 %26, i32* %7, align 4
  %27 = load i32, i32* %7, align 4
  %28 = load %struct.mxc_gpio_port*, %struct.mxc_gpio_port** %4, align 8
  %29 = getelementptr inbounds %struct.mxc_gpio_port, %struct.mxc_gpio_port* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* @GPIO_IMR, align 8
  %32 = add nsw i64 %30, %31
  %33 = call i32 @__raw_writel(i32 %27, i64 %32)
  ret void
}

declare dso_local i32 @__raw_readl(i64) #1

declare dso_local i32 @__raw_writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
